// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> should not override trigger's aria-label attribute 1`] = `
<div>
  <input
    aria-label="Email Address"
    placeholder="Enter email"
    type="email"
  />
</div>
`;

exports[`<Tooltip /> should render 1`] = `
.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c5.c5.c5.c5.c5 {
  z-index: 1100;
  pointer-events: none;
}

.c6.c6.c6.c6.c6 {
  position: relative;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 12px;
  padding-left: 12px;
  max-width: 200px;
}

.c7.c7.c7.c7.c7 {
  background-color: hsla(211,29%,26%,1);
  border-width: 1px;
  border-radius: 4px;
  border-color: hsla(211,26%,34%,1);
  border-style: solid;
  box-shadow: 0px 2px 16px 0px hsla(217,56%,17%,0.10);
  opacity: 0;
  -webkit-transform: translateY(4px);
  -ms-transform: translateY(4px);
  transform: translateY(4px);
}

.c4.c4.c4.c4.c4 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(0,0%,100%,0.88);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  word-break: break-word;
}

.c0.c0.c0.c0.c0 {
  min-height: 36px;
  width: auto;
  cursor: pointer;
  background-color: hsla(227,100%,59%,1);
  border-color: hsla(227,100%,59%,1);
  border-width: 0px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 20px;
  padding-right: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c0.c0.c0.c0.c0:hover {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
}

.c0.c0.c0.c0.c0:active {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
}

.c0.c0.c0.c0.c0:focus-visible {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c0.c0.c0.c0.c0 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c1.c1.c1.c1.c1 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c3.c3.c3.c3.c3 {
  opacity: 1;
}

@media screen and (min-width:320px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

@media screen and (min-width:480px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

@media screen and (min-width:768px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

@media screen and (min-width:1024px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

@media screen and (min-width:1200px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

<body>
  <div>
    <button
      aria-describedby=":r0:"
      class="c0"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c1"
        data-blade-component="base-box"
      >
        <div
          class="c2 c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-text"
          >
            Hover me
          </div>
        </div>
      </div>
    </button>
  </div>
  <div
    data-floating-ui-portal=""
    id=":r2:"
  >
    <div
      class="c5"
      data-blade-component="tooltip"
      id=":r0:"
      pointer-events="none"
      role="tooltip"
      style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px);"
      tabindex="-1"
    >
      <div
        class="c6 c7"
        data-blade-component="base-box"
      >
        <p
          class="c8"
          data-blade-component="text"
        >
          Hello world
        </p>
        <svg
          aria-hidden="true"
          fill="hsla(211, 29%, 26%, 1)"
          height="14"
          style="position: absolute; pointer-events: none; top: 100%;"
          viewBox="0 0 14 14"
          width="16"
        >
          <path
            clip-path="url(#:r3:)"
            d="M0,0 H14 L7,7 Q7,7 7,7 Z"
            fill="none"
            stroke="hsla(211, 26%, 34%, 1)"
            stroke-width="3"
          />
          <path
            d="M0,0 H14 L7,7 Q7,7 7,7 Z"
            stroke="hsla(211, 29%, 26%, 1)"
          />
          <clippath
            id=":r3:"
          >
            <rect
              height="14"
              width="16"
              x="-1"
              y="1"
            />
          </clippath>
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`<Tooltip /> should render tooltip with custom zIndex 1`] = `
.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c5.c5.c5.c5.c5 {
  z-index: 9999;
  pointer-events: none;
}

.c6.c6.c6.c6.c6 {
  position: relative;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 12px;
  padding-left: 12px;
  max-width: 200px;
}

.c7.c7.c7.c7.c7 {
  background-color: hsla(211,29%,26%,1);
  border-width: 1px;
  border-radius: 4px;
  border-color: hsla(211,26%,34%,1);
  border-style: solid;
  box-shadow: 0px 2px 16px 0px hsla(217,56%,17%,0.10);
  opacity: 0;
  -webkit-transform: translateY(4px);
  -ms-transform: translateY(4px);
  transform: translateY(4px);
}

.c4.c4.c4.c4.c4 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(0,0%,100%,0.88);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  word-break: break-word;
}

.c0.c0.c0.c0.c0 {
  min-height: 36px;
  width: auto;
  cursor: pointer;
  background-color: hsla(227,100%,59%,1);
  border-color: hsla(227,100%,59%,1);
  border-width: 0px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 20px;
  padding-right: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c0.c0.c0.c0.c0:hover {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
}

.c0.c0.c0.c0.c0:active {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
}

.c0.c0.c0.c0.c0:focus-visible {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c0.c0.c0.c0.c0 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c1.c1.c1.c1.c1 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c3.c3.c3.c3.c3 {
  opacity: 1;
}

@media screen and (min-width:320px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

@media screen and (min-width:480px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

@media screen and (min-width:768px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

@media screen and (min-width:1024px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

@media screen and (min-width:1200px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

<body>
  <div>
    <button
      aria-describedby=":r8:"
      class="c0"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c1"
        data-blade-component="base-box"
      >
        <div
          class="c2 c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-text"
          >
            Hover me
          </div>
        </div>
      </div>
    </button>
  </div>
  <div
    data-floating-ui-portal=""
    id=":ra:"
  >
    <div
      class="c5"
      data-blade-component="tooltip"
      id=":r8:"
      pointer-events="none"
      role="tooltip"
      style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px);"
      tabindex="-1"
    >
      <div
        class="c6 c7"
        data-blade-component="base-box"
      >
        <p
          class="c8"
          data-blade-component="text"
        >
          Hello world
        </p>
        <svg
          aria-hidden="true"
          fill="hsla(211, 29%, 26%, 1)"
          height="14"
          style="position: absolute; pointer-events: none; top: 100%;"
          viewBox="0 0 14 14"
          width="16"
        >
          <path
            clip-path="url(#:rb:)"
            d="M0,0 H14 L7,7 Q7,7 7,7 Z"
            fill="none"
            stroke="hsla(211, 26%, 34%, 1)"
            stroke-width="3"
          />
          <path
            d="M0,0 H14 L7,7 Q7,7 7,7 Z"
            stroke="hsla(211, 29%, 26%, 1)"
          />
          <clippath
            id=":rb:"
          >
            <rect
              height="14"
              width="16"
              x="-1"
              y="1"
            />
          </clippath>
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`<Tooltip /> should render with title 1`] = `
.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c5.c5.c5.c5.c5 {
  z-index: 1100;
  pointer-events: none;
}

.c6.c6.c6.c6.c6 {
  position: relative;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 12px;
  padding-left: 12px;
  max-width: 200px;
}

.c7.c7.c7.c7.c7 {
  background-color: hsla(211,29%,26%,1);
  border-width: 1px;
  border-radius: 4px;
  border-color: hsla(211,26%,34%,1);
  border-style: solid;
  box-shadow: 0px 2px 16px 0px hsla(217,56%,17%,0.10);
  opacity: 0;
  -webkit-transform: translateY(4px);
  -ms-transform: translateY(4px);
  transform: translateY(4px);
}

.c4.c4.c4.c4.c4 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c9.c9.c9.c9.c9 {
  color: hsla(0,0%,100%,0.88);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  word-break: break-word;
}

.c0.c0.c0.c0.c0 {
  min-height: 36px;
  width: auto;
  cursor: pointer;
  background-color: hsla(227,100%,59%,1);
  border-color: hsla(227,100%,59%,1);
  border-width: 0px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 20px;
  padding-right: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c0.c0.c0.c0.c0:hover {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
}

.c0.c0.c0.c0.c0:active {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
}

.c0.c0.c0.c0.c0:focus-visible {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c0.c0.c0.c0.c0 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c1.c1.c1.c1.c1 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c3.c3.c3.c3.c3 {
  opacity: 1;
}

@media screen and (min-width:320px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

@media screen and (min-width:480px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

@media screen and (min-width:768px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

@media screen and (min-width:1024px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

@media screen and (min-width:1200px) {
  .c5.c5.c5.c5.c5 {
    pointer-events: none;
  }
}

<body>
  <div>
    <button
      aria-describedby=":r4:"
      class="c0"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c1"
        data-blade-component="base-box"
      >
        <div
          class="c2 c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-text"
          >
            Hover me
          </div>
        </div>
      </div>
    </button>
  </div>
  <div
    data-floating-ui-portal=""
    id=":r6:"
  >
    <div
      class="c5"
      data-blade-component="tooltip"
      id=":r4:"
      pointer-events="none"
      role="tooltip"
      style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px);"
      tabindex="-1"
    >
      <div
        class="c6 c7"
        data-blade-component="base-box"
      >
        <p
          class="c8"
          data-blade-component="text"
        >
          Tooltip title
        </p>
        <p
          class="c9"
          data-blade-component="text"
        >
          Hello world
        </p>
        <svg
          aria-hidden="true"
          fill="hsla(211, 29%, 26%, 1)"
          height="14"
          style="position: absolute; pointer-events: none; top: 100%;"
          viewBox="0 0 14 14"
          width="16"
        >
          <path
            clip-path="url(#:r7:)"
            d="M0,0 H14 L7,7 Q7,7 7,7 Z"
            fill="none"
            stroke="hsla(211, 26%, 34%, 1)"
            stroke-width="3"
          />
          <path
            d="M0,0 H14 L7,7 Q7,7 7,7 Z"
            stroke="hsla(211, 29%, 26%, 1)"
          />
          <clippath
            id=":r7:"
          >
            <rect
              height="14"
              width="16"
              x="-1"
              y="1"
            />
          </clippath>
        </svg>
      </div>
    </div>
  </div>
</body>
`;
